2009-11-16  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        land-patches needs to be re-factored into smaller chunks
        https://bugs.webkit.org/show_bug.cgi?id=31532

        * Scripts/bugzilla-tool: fix a couple obvious typos.

2009-11-16  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        land-patches needs to be re-factored into smaller chunks
        https://bugs.webkit.org/show_bug.cgi?id=31532

        The next patch will move these methods into WebKitLandingScripts.

        * Scripts/bugzilla-tool:
         - Split out _land_patch and _close_bug_if_no_active_patches.

2009-11-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Fix silly copy-and-paste code.  I am a terrible coder.

        * Scripts/modules/bugzilla.py:

2009-11-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Implement a StyleQueue
        https://bugs.webkit.org/show_bug.cgi?id=31537

        The first iteration of the style queue only produces output locally.
        There is also a limit of 10 patches because it's not that useful to
        iterate through the entire review queue at this point.  We can remove
        the limit later.

        * Scripts/bugzilla-tool:
        * Scripts/modules/bugzilla.py:

2009-11-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Unit test WorkQueue
        https://bugs.webkit.org/show_bug.cgi?id=31531

        Adds basic unit testing for WorkQueue.  Just runs through one cycle.

        * Scripts/bugzilla-tool:
        * Scripts/modules/statusbot.py:
        * Scripts/modules/workqueue.py:
        * Scripts/modules/workqueue_unittest.py: Added.
        * Scripts/run-webkit-unittests:

2009-11-16  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool land-diff should know how to parse bug ids out of ChangeLogs
        https://bugs.webkit.org/show_bug.cgi?id=31530
