@@ -2,6 +2,15 @@
 
         Reviewed by Adam Barth.
 
+        Re-factor workqueue_unittest to allow for more than one test.
+        https://bugs.webkit.org/show_bug.cgi?id=31535
+
+        * Scripts/modules/workqueue_unittest.py:
+
+2009-11-16  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
         land-patches needs to be re-factored into smaller chunks
         https://bugs.webkit.org/show_bug.cgi?id=31532
 
